@@ -47,7 +47,7 @@ in reply to: <a href="{{ .RID }}" rel=noreferrer>{{ .RID }}</a>
 {{ if eq .Media "text/plain" }}
 <p><a href="/d/{{ .XID }}">Attachment: {{ .Name }}</a>
 {{ else }}
-<p><a href="/d/{{ .XID }}"><img src="/d/{{ .XID }}" title="{{ .URL }}"></a>
+<p><a href="/d/{{ .XID }}"><img src="/d/{{ .XID }}" title="{{ .Desc }}"></a>
 {{ end }}
 {{ else }}
 {{ if .XID }}
@@ -56,7 +56,7 @@ in reply to: <a href="{{ .RID }}" rel=noreferrer>{{ .RID }}</a>
 {{ if eq .Media "video/mp4" }}
 <p><a href="{{ .URL }}"><video controls src="{{ .URL }}">{{ .Name }}</video></a>
 {{ else }}
-<p><a href="{{ .URL }}"><img src="{{ .URL }}" title="{{ .Name }}"></a>
+<p><a href="{{ .URL }}"><img src="{{ .URL }}" title="{{ .Desc }}"></a>
 {{ end }}
 {{ end }}
 {{ end }}
