@@ -7,6 +7,8 @@ in reply to: <input type="text" name="rid" id="ridinput" value="{{ .InReplyTo }}
 <p>
 <label id="donker">attach: {{ if .SavedFile }} {{ .SavedFile }} {{ else }} <input onchange="updatedonker();" type="file" name="donk"><span></span> {{ end }}</label>
 <input type="hidden" name="donkxid" value="{{ .SavedFile }}">
+<p id="donkdescriptor">
+description: <input type="text" name="donkdesc" value="{{ .DonkDesc }}" autocomplete=off>
 <p>
 <textarea name="noise" id="honknoise">{{ .Noise }}</textarea>
 <p>
@@ -14,6 +16,10 @@ in reply to: <input type="text" name="rid" id="ridinput" value="{{ .InReplyTo }}
 <input type="submit" name="preview" value="preview">
 </form>
 <script>
+(function() {
+	var el = document.getElementById("donkdescriptor")
+	el.style.display = "none"
+})();
 function showhonkform(elem, rid, hname) {
 	var form = document.getElementById("honkform")
 	form.style = "display: block"
@@ -35,5 +41,7 @@ function showhonkform(elem, rid, hname) {
 function updatedonker() {
 	var el = document.getElementById("donker")
 	el.children[1].textContent = el.children[0].value.slice(-20)
+	var el = document.getElementById("donkdescriptor")
+	el.style.display = ""
 }
 </script>
